[package]
name = "terminalviva"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0.164", features = ["derive"] }
config = { version = "0.13.3", features = ["toml"] }
lazy_static = "1.4.0"
tabled = "0.12.2"
clap = { version = "4.3.9", features = ["derive"]}
chrono = "0.4.26"
